--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,13 @@
     <div class="wrapper">
       <div class="site-header__logo">
         <div class="site-header__logo__graphic icon icon--clear-view-escapes"> Clear View Escapes</div>
-
       </div>
 
-      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-icon">
+
+        <div class="site-header__menu-icon__middle"></div>
+        
+      </div>
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
           <a href="#" class="btn">Get in Touch</a>
@@ -167,5 +170,6 @@
 
     </div>
   </footer>
+  <script type="text/javascript" src="/temp/scripts/App.js"></script>
 </body>
 </html>
